--- a/mz-common/pom.xml
+++ b/mz-common/pom.xml
@@ -80,6 +80,13 @@
             <artifactId>minio</artifactId>
         </dependency>
 
+        <!-- 腾讯云短信 -->
+        <dependency>
+            <groupId>com.tencentcloudapi</groupId>
+            <artifactId>tencentcloud-sdk-java</artifactId>
+            <version>3.1.270</version>
+        </dependency>
+
     </dependencies>
 
     <properties>
