--- a/mz-common/pom.xml
+++ b/mz-common/pom.xml
@@ -31,6 +31,12 @@
             <artifactId>spring-boot-starter-aop</artifactId>
         </dependency>
 
+        <!-- redis依赖 -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+
         <!-- lombok工具 -->
         <dependency>
             <groupId>org.projectlombok</groupId>
