--- a/mz-common/pom.xml
+++ b/mz-common/pom.xml
@@ -93,6 +93,16 @@
             <version>3.1.270</version>
         </dependency>
 
+        <!-- Knife4j 接口文档工具 -->
+        <dependency>
+            <groupId>com.github.xiaoymin</groupId>
+            <artifactId>knife4j-spring-boot-starter</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.github.xiaoymin</groupId>
+            <artifactId>knife4j-springdoc-ui</artifactId>
+        </dependency>
+
     </dependencies>
 
     <properties>
